# play-with-opencv

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt  anisotropic_image_segmentation.cpp  capture_edge.cpp  image_segment.cpp  lkdemo.cpp
experiment/: CMakeLists.txt
performance/: CMakeLists.txt  tapi.cpp
perftest/: CMakeLists.txt  memcpy.cpp  oprtest.cpp  perf_event_open.c  perftest.cpp  simpleperf.cpp  tapi.cpp
script/: build-ocv.bat  build-ocv.sh  build.bat  build.sh  display_bm.py  run_android.sh
